# hashiwokakero-qml

./: .gitignore  CMakeLists.txt  LICENSE  README.md
hashiwokakero/: CMakeLists.txt
hashiwokakero-lib/: CMakeLists.txt
hashiwokakero-lib/include/: board.hpp  boardbuilder.hpp  boardposition.hpp  bridge.hpp  hashiwokakero.hpp  island.hpp
hashiwokakero-lib/src/: boardbuilder.cpp  boardposition.cpp  bridge.cpp  hashiwokakero.cpp  island.cpp  vectorboard.cpp  vectorboard.hpp
hashiwokakero-lib/test/: buildBridges.cpp  generate.cpp
hashiwokakero/src/: boardlogic.cpp  boardlogic.hpp  main.cpp
hashiwokakero/ui/: Board.qml  Bridge.qml  Island.qml  main.qml
